--- a/.gitignore
+++ b/.gitignore
@@ -169,3 +169,9 @@
 
 # # PyPI configuration file
 # .pypirc
+
+# project-specific files and directories
+results/logs/pytest/*
+results/logs/unittest/*
+results/metrics/pytest/*
+results/metrics/unittest/*
